# dp

./: .gitignore  LICENSE  README.MD  command_handler.py  common.py  dp.py  setup.cfg  setup.py
convert/: ppt_to_pdf.py
convert/tests/: result.pptx
draw/: bar.py
draw/tests/: bar-data.xlsx
manipulate/: drop_column.py  drop_duplicate_row.py  filter.py  merge_data_frame.py  rename.py
merge/: __init__.py  csv_to_xlsx.py  cvs_to_xlsx.py  multi_csv_to_single_csv.py  multi_csv_to_single_xlsx.py  multi_cvs_to_single_cvs.py
ppt/: sync_image.py
ppt/tests/: sample.pptx
rw/: read.py  read_json.py  read_write.py  read_xlsx.py  send_email.py  write.py  write_csv.py  write_xlsx.py
src/digolds/: command_handler.py  common.py  dp.py
src/digolds/convert/: ppt_to_pdf.py
src/digolds/draw/: __init__.py  bar.py
src/digolds/draw/tests/: bar-data.xlsx
src/digolds/manipulate/: drive_new_column.py  drop_empty_row.py  filter.py  format_date.py
src/digolds/merge/: csv_to_xlsx.py  multi_csv_to_single_csv.py  multi_csv_to_single_xlsx.py
src/digolds/ppt/: sync_image.py  sync_text.py
src/digolds/rw/: read_csv.py  send_email.py
tests/: __init__.py  test_common.py  test_manipulation.py  test_ppt_to_pdf.py  test_sync_image_to_ppt.py
