[metadata]
name = digolds-dp
version = 0.0.2
author = Zheng, Silong
author_email = founders@digolds.cn
description = An easy-to-use data pipeline for data analysts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/digolds/dp
project_urls =
    Bug Tracker = https://github.com/digolds/dp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
install_requires =
    pandas
    matplotlib
    numpy
#'pywin32',
    python-pptx
    openpyxl
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    dp = digolds.dp:run